maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:2: error: Missing closing brace `}' assumed here
var etat=0
^IslandMaze:2: error: expected class or object definition
var etat=0
^IslandMaze:3: error: expected start of definition
override def run() {
         ^